--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "type-check": "tsc"
   },
   "dependencies": {
+    "@emotion/react": "^11.1.4",
+    "@emotion/styled": "^11.0.0",
+    "@zeit/next-css": "^1.0.1",
+    "@zeit/next-sass": "^1.0.1",
     "next": "latest",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
